--- a/index.html
+++ b/index.html
@@ -48,7 +48,28 @@
       </div>
     </div>
     <div class="playlist" id="playlist">
-      <!-- Playlist items will be injected here -->
+      <div class="playlist-item"
+           data-title="Dreamscape"
+           data-artist="Unknown"
+           data-src="songs/dreamscape.mp3"
+           data-cover="songs/song-cover-photo-01.png">
+        Dreamscape - Unknown
+      </div>
+      <div class="playlist-item"
+           data-title="Gravity"
+           data-artist="Unknown"
+           data-src="songs/gravity.mp3"
+           data-cover="songs/song-cover-photo-02.png">
+        Gravity - Unknown
+      </div>
+      <div class="playlist-item"
+           data-title="Lemonade"
+           data-artist="Unknown"
+           data-src="songs/lemonade.mp3"
+           data-cover="songs/song-cover-photo-03.png">
+        Lemonade - Unknown
+      </div>
+      <!-- আরও গান চাইলে এখানেই data-attribute দিয়ে যোগ করুন -->
     </div>
     <audio id="audio"></audio>
   </div>
@@ -87,6 +108,51 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="playlist-dark" id="playlist-dark">
+      <div class="playlist-item"
+           data-title="2nd-Playlist-Item01"
+           data-artist="Artist 2A"
+           data-src="songs/2nd-Playlist-Item01.mp3"
+           data-cover="songs/song-cover-photo-04.png">
+        2nd-Playlist-Item01 - Artist 2A
+      </div>
+      <div class="playlist-item"
+           data-title="2nd-Playlist-Item02"
+           data-artist="Artist 2B"
+           data-src="songs/2nd-Playlist-Item02.mp3"
+           data-cover="songs/song-cover-photo-05.png">
+        2nd-Playlist-Item02 - Artist 2B
+      </div>
+      <div class="playlist-item"
+           data-title="2nd-Playlist-Item03"
+           data-artist="Artist 2C"
+           data-src="songs/2nd-Playlist-Item03.mp3"
+           data-cover="songs/song-cover-photo-06.png">
+        2nd-Playlist-Item03 - Artist 2C
+      </div>
+      <div class="playlist-item"
+           data-title="2nd-Playlist-Item04"
+           data-artist="Artist 2D"
+           data-src="songs/2nd-Playlist-Item04.mp3"
+           data-cover="songs/song-cover-photo-07.png">
+        2nd-Playlist-Item04 - Artist 2D
+      </div>
+      <div class="playlist-item"
+           data-title="2nd-Playlist-Item05"
+           data-artist="Artist 2E"
+           data-src="songs/2nd-Playlist-Item05.mp3"
+           data-cover="songs/song-cover-photo-08.png">
+        2nd-Playlist-Item05 - Artist 2E
+      </div>
+      <div class="playlist-item"
+           data-title="2nd-Playlist-Item06"
+           data-artist="Artist 2F"
+           data-src="songs/2nd-Playlist-Item06.mp3"
+           data-cover="songs/song-cover-photo-09.png">
+        2nd-Playlist-Item06 - Artist 2F
+      </div>
+      <!-- আরও গান চাইলে এখানেই data-attribute দিয়ে যোগ করুন -->
     </div>
     <audio id="audio-dark"></audio>
   </div>
@@ -128,7 +194,49 @@
       </div>
     </div>
     <div class="playlist-minimal" id="playlist-minimal">
-      <!-- Playlist items will be injected here -->
+      <div class="playlist-item"
+           data-title="3rd-Playlist-Item01"
+           data-artist="Artist 3A"
+           data-src="songs/3rd-Playlist-Item01.mp3"
+           data-cover="songs/song-cover-photo-10.png">
+        3rd-Playlist-Item01 - Artist 3A
+      </div>
+      <div class="playlist-item"
+           data-title="3rd-Playlist-Item02"
+           data-artist="Artist 3B"
+           data-src="songs/3rd-Playlist-Item02.mp3"
+           data-cover="songs/song-cover-photo-01.png">
+        3rd-Playlist-Item02 - Artist 3B
+      </div>
+      <div class="playlist-item"
+           data-title="3rd-Playlist-Item03"
+           data-artist="Artist 3C"
+           data-src="songs/3rd-Playlist-Item03.mp3"
+           data-cover="songs/song-cover-photo-02.png">
+        3rd-Playlist-Item03 - Artist 3C
+      </div>
+      <div class="playlist-item"
+           data-title="3rd-Playlist-Item04"
+           data-artist="Artist 3D"
+           data-src="songs/3rd-Playlist-Item04.mp3"
+           data-cover="songs/song-cover-photo-03.png">
+        3rd-Playlist-Item04 - Artist 3D
+      </div>
+      <div class="playlist-item"
+           data-title="3rd-Playlist-Item05"
+           data-artist="Artist 3E"
+           data-src="songs/3rd-Playlist-Item05.mp3"
+           data-cover="songs/song-cover-photo-04.png">
+        3rd-Playlist-Item05 - Artist 3E
+      </div>
+      <div class="playlist-item"
+           data-title="3rd-Playlist-Item06"
+           data-artist="Artist 3F"
+           data-src="songs/3rd-Playlist-Item06.mp3"
+           data-cover="songs/song-cover-photo-05.png">
+        3rd-Playlist-Item06 - Artist 3F
+      </div>
+      <!-- আরও গান চাইলে এখানেই data-attribute দিয়ে যোগ করুন -->
     </div>
     <audio id="audio-minimal"></audio>
   </div>
